# oplog

./: .gitignore  LICENSE  README.md  integration_traces.db  pyproject.toml
.github/workflows/: publish.yml
exports/: training.jsonl
oplog/: __init__.py  builder.py  config.py  context.py  db.py  export.py  models.py  utils.py
oplog/backends/: __init__.py  sql.py
tests/: __init__.py  test_integration.py  test_oplog.py  test_scenarios.py
