[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oplog"
version = "0.1.1"
description = "A minimal library for capturing ML/NLP operation traces for later training data export"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Bart Haagsma" }
]
keywords = ["ml", "nlp", "logging", "tracing", "training-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "python-ulid>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
export = ["pandas", "datasets"]
dev = ["pytest"]
all = ["psycopg2-binary", "pandas", "datasets", "pytest"]

[project.urls]
Homepage = "https://github.com/baagsma/oplog"
Repository = "https://github.com/baagsma/oplog"

[tool.hatch.build.targets.wheel]
packages = ["oplog"]